2005-05-20  Federico Mena Quintero  <federico@ximian.com>

	Merged from glib-2-6:

	* glib/gspawn.c (g_spawn_command_line_sync): Clarify the meaning
	of exit_status(); it's not the return code from the child, but
	rather the waitpid() status.

2005-05-18  Matthias Clasen  <mclasen@redhat.com>

	* glib/gunidecomp.c: Correct the end of the Hangul 
	Syllables range, from 0xd7af to 0xd7a3, in several
	places.  (#301984, Changwoo Ryu)

2005-05-17  Matthias Clasen  <mclasen@redhat.com>

	* tests/tree-test.c (main): Check the return values of
	g_tree_remove().

	* glib/gtree.c (g_tree_remove, g_tree_steal): Return
	a boolean indicating wether the key was found.  (#302545,
	Matthew F. Barnes)

2005-05-06  Brian Cameron  <brian.cameron@sun.com>

	* configure.in, gmodule-no-export-2.0-uninstalled.pc.in,
	  Makefile.am:  Added gmodule-no-export-2.0-uninstalled.pc.in
	  to allow building of other libraries like pango when 
	  glib is uninstalled.

2005-05-06  Matthias Clasen  <mclasen@redhat.com>

	* tests/option-test.c: Add a testcase.
	
	* glib/goption.c (g_option_context_parse): Treat '-'
	on its own as a non-option argument.  (#168008, Tim Musson,
	Thomas Leonard and others)

2005-05-05  Owen Taylor  <otaylor@redhat.com>

	* glib/gdataset.[ch] glib/gdatasetprivate.h: Add 
	g_datalist_set/unset_flags(), g_datalist_get_flags() functions
	to squeeze some bits into a GDataSet... this is needed for
	efficient implementation of toggle references in GObject.

	* tests/gobject/references.c tests/gobject/Makefile.am:
	Add a test case for weak and toggle references.

	* glib/gfileutils.[ch]: Rename g_file_replace() back
	to g_file_set_contents().

	* glib/glib.symbols: Update.

2005-05-02  Matthias Clasen  <mclasen@redhat.com>

	* glib/gstring.c (g_str_equal, g_str_hash): Move docs
	inline.

2005-05-01  Matthias Clasen  <mclasen@redhat.com>

	* glib/ghash.h: Rename some parameters to make gtk-doc
	happy.

	* glib/gutils.c: 
	* glib/gwin32.c: 